...

    <TextView
        android:id="@+id/tv_emotion_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="슬픔"
        android:textStyle="bold"
        android:textColor="@color/emotion_sad"/>

    <RadioGroup
        android:id="@+id/radio_group_emotion"
        android:layout_width="wrap_content"
...
